--- a/public/styles/staticbreaks.css
+++ b/public/styles/staticbreaks.css
@@ -12,11 +12,18 @@
 
 
 @media screen and (min-width: 1300px) {
+
+    /*common*/
+    .commonBanner .commonBannerContent { padding: 0 100px 70px; }
+
     .productLeftMenuSec {min-width: 350px;}
 }
 
 
 @media only screen and (min-width : 1200px) {}
+
+@media screen and (max-width: 1200px) {
+}
 
 @media only screen and (max-width: 1100px) {}
 
@@ -25,6 +32,7 @@
     
     /*common banner*/
     .commonBanner .commonBannerWrap{height: 450px;}
+    .commonBanner .commonBannerContent { padding: 0 25px 30px; }
 
     .productSections {flex-direction: column;}
     .productContent {top: 60px;left: 25px;}
