--- a/public/styles/testbreaks.css
+++ b/public/styles/testbreaks.css
@@ -30,6 +30,8 @@
 
 @media only screen and (max-width: 991px) {
 
+    .contactUsWrapper h1{color: #ff1414;}
+
 }
 
 @media only screen and (max-width: 767px) {
