--- a/public/styles/staticbreaks.css
+++ b/public/styles/staticbreaks.css
@@ -6,6 +6,9 @@
 
 @media screen and (min-width: 1440px) {
 
+    /*application page*/
+    .applicationsInnerBody{padding: 150px 0;gap: 90px 45px;}
+
     /*approvals-and-associates page*/
     .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(6, 1fr);}
 }
@@ -61,7 +64,7 @@
     .productLeftMenuSec {min-width: auto;}
 
     /*common banner*/
-    .commonBanner .commonBannerWrap {height: 250px;}
+    .commonBanner .commonBannerWrap {height: 400px;}
     .commonBanner .commonBannerContent h1 {font-size: 28px; }
 
     /*products main*/        
@@ -70,7 +73,7 @@
     .productsMainItemContent > a { font-size: 16px; } 
 
     /*application page*/
-    .applicationsInnerBody { padding: 60px 0 15px; }
+    .applicationsInnerBody { padding: 60px 0; }
     .applicationsInnerGrid {grid-template-columns: repeat(1, 1fr); gap: 40px; }
     .applicationsInnerGridItemTitle > img { max-width: 55px; }    
     .applicationsInnerGridItem {gap: 25px;}
@@ -85,6 +88,9 @@
 
     /*approvals-and-associates page*/
     .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(1, 1fr);gap: 30px;}
+
+        /*application page*/
+        /* .applicationsInnerBody { padding: 40px 0; } */
 
 }
 
