--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -42,9 +42,8 @@
 .prdtDesc>a{font-family: var(--regular);padding-bottom: 5px;font-size: 18px;line-height: 25px;color:var(--blue);border-bottom: 1px solid var(--sred);}
 
 /*application page*/
-/* .applicationsInnerWrap {margin-bottom: 160px;} */
 .applicationsInnerBody{padding: 100px 0;}
-.applicationsInnerGrid { display: grid;grid-template-columns: repeat(3, 1fr); gap: 80px; }
+.applicationsInnerGrid { display: grid;grid-template-columns: repeat(3, 1fr); gap: 60px 30px; }
 .applicationsInnerGridItem { display: flex; flex-direction: column; gap: 30px; }
 .applicationsInnerGridItemImg > img { border-radius: 20px; }
 .applicationsInnerGridItemTitle { display: flex; align-items: center; gap: 20px; }
@@ -64,7 +63,6 @@
 .approvalsAndAsscociatesBodyGridItem > em > img{border-radius: 20px;}
 
 /*faq*/
-/* .faqWrapper{margin-bottom: 160px;} */
 .faqBody{padding: 100px 0;}
 .faqList { display: flex; flex-direction: column; }
 .faqItem { border-bottom: 1px solid #A8A8A8;overflow: hidden; }
