approvals-and-associates page

--- a/public/styles/staticbreaks.css
+++ b/public/styles/staticbreaks.css
@@ -10,6 +10,7 @@
     .applicationsInnerBody{padding: 150px 0;gap: 90px 45px;}
 
     /*approvals-and-associates page*/
+    .approvalsAndAsscociatesBody{padding: 100px 0;}
     .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(6, 1fr);}
 }
 
@@ -53,7 +54,9 @@
     .applicationsInnerGridItemContent a { margin-top: 25px; }
 
     /*approvals-and-associates page*/
-    .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(3, 1fr);gap: 40px;}
+    .approvalsAndAsscociatesBody{padding: 60px 0;}
+    .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(3, 1fr);gap: 30px;margin-top: 40px;} 
+    .approvalsAndAsscociatesBodyTitle > p{max-width: 100%;}       
      
 }
 
@@ -79,7 +82,10 @@
     .applicationsInnerGridItem {gap: 25px;}
     
     /*approvals-and-associates page*/
-    .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(2, 1fr);gap: 30px;}
+    .approvalsAndAsscociatesBody { padding: 40px 0 60px; }
+    .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(2, 1fr);gap: 25px;}
+    .approvalsAndAsscociatesBodyTitle > h2 {font-size: 25px; margin-bottom: 12px; }
+    .approvalsAndAsscociatesBodyTitle > p {font-size: 16px;}
     
 }
 
@@ -87,7 +93,10 @@
     .productList {grid-template-columns: 1fr;}
 
     /*approvals-and-associates page*/
-    .approvalsAndAsscociatesBodyGrid{grid-template-columns: repeat(1, 1fr);gap: 30px;}
+    .approvalsAndAsscociatesBodyGrid{gap: 30px 20px;}
+    .approvalsAndAsscociatesBodyGridItem { gap: 15px;}
+    .approvalsAndAsscociatesBodyGridItem > h3 {font-size: 16px;}
+    .approvalsAndAsscociatesBodyGrid { margin-top: 30px;}
 
         /*application page*/
         /* .applicationsInnerBody { padding: 40px 0; } */
