--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -1,2 +1,25 @@
-.contactUsWrapper{padding:80px 0;margin-bottom: 100px;}
-.contactUsWrapper h1{color: var(--blue);}
+.contactUsWrapper{}
+.contactInfoList{display: flex;justify-content: space-between;padding: 80px 0;border-bottom: 1px solid #e9e9e9;}
+.contactInfoBx{position: relative;padding-left: 80px;}
+.contactInfoBx>span{position: absolute;top:0;left:0}
+.contactInfoBx>h2{font-family: var(--medium);font-size: 25px;line-height: 35px;color:#333333;margin:0 0 4px;}
+.contactInfoBx>a{font-family: var(--regular);font-size: 18px;line-height: 25px;color:#111111;transition: all 0.5s ease;}
+.contactInfoBx>a:hover{color:var(--sred);}
+
+.contactGetInTouchWrap{padding:80px 0;}
+.contactGetInTouch>h3{font-family: var(--medium);font-size: 30px;line-height: 35px;color:#333333;margin:0 0 35px;}
+.getInBoxSet{display: flex;gap:30px;}
+.getInTouchBox{padding: 30px;background-color: #f5f5f5;border-radius: 16px;flex-basis: calc(100% - 33.3%);}
+.getInTouchBox>h4{font-family: var(--medium);font-size: 25px;line-height: 30px;color:#333333;margin:0 0 20px;}
+.getInTouchBox>span{position: relative;padding-left: 35px;display: block;}
+.getInTouchBox>span:after{content: '';background-image: url("../images/contactus/address-icon.svg");background-repeat: no-repeat;background-size: contain;display: inline-block;width: 20px;height: 20px;position: absolute;top:10px;left:0;}
+.getInTouchBox>span.email:after{background-image: url("../images/contactus/email.svg");}
+.getInTouchBox>span>em{display: block;font-style: normal;font-family: var(--regular);font-size: 18px;line-height: 30px;color:#000;margin:0;}
+.getInTouchBox>span>p,.getInTouchBox>span>a{font-family: var(--regular);font-size: 16px;line-height: 25px;color:#333333;margin:0;padding-bottom: 20px;transition: all 0.5s ease;}
+.getInTouchBox>span>p>i{font-style: normal;display: block;}
+.getInTouchBox>span>a:hover{color:var(--sred);}
+
+.contactIndiaWrap{padding: 80px;border-radius:var(--border-home) ;position: relative;overflow: hidden;min-height: 800px;}
+/* .contactIndiaWrap:after{content: '';background-image: url("../images/contactus/india-background.png");background-repeat: no-repeat;background-size: contain;position: absolute;top:0;left:0;bottom: 0;right:0;z-index: 1;} */
+.contactIndiaWrap:before{content: '';z-index: 2;background-color: #f3f3f3;position: absolute;top:0;bottom:0;right:0;left:0;opacity: 0.9;}
+.indiaImg{max-width: 884px;margin:0 auto;position: relative;z-index: 3;}
