--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -85,3 +85,12 @@
 .insightsAndUpdatesInnerGridItem a { font-size: 18px; font-family: var(--medium); color: var(--blue); cursor: pointer;position: relative;padding-right: 30px; transition: color 0.3s ease; }
 .insightsAndUpdatesInnerGridItem a:after { content: ""; position: absolute; right: 0; top: 6px; width: 20px; height: 20px; background-image: url("/images/icons/right-arrow-red.svg"); background-size: contain; background-repeat: no-repeat; cursor: pointer; transition: transform 0.3s ease; }
 .insightsAndUpdatesInnerGridItem a:hover:after { transform: translateX(3px); }
+
+/*careeers*/
+.careersBodyWrap{padding: 100px 0;}
+.careersBody{display: flex;gap: 60px;}
+.careersFormSec{flex: 1;}
+.careersImgSec{flex:1}
+.careersFormSec form{display: flex;flex-direction: column;gap:20px;}
+.careersFormSec form input{width: 100%;padding: 22px 20px;border-radius: 5px;height: 45px;border: 1px solid #C8C8C8;}
+.careersFormSec form input::placeholder{font-size: 18px;line-height: 1em;color: #111111;}
