--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -1,35 +1,37 @@
 .contactUsWrapper{}
 .contactInfoList{display: flex;justify-content: space-between;padding: 80px 0;border-bottom: 1px solid #e9e9e9;}
-.contactInfoBx{position: relative;padding-left: 80px;}
+.contactInfoBx{position: relative;padding-left: 72px;}
 .contactInfoBx>span{position: absolute;top:0;left:0}
-.contactInfoBx>h2{font-family: var(--medium);font-size: 25px;line-height: 35px;color:#333333;margin:0 0 4px;}
-.contactInfoBx>a{font-family: var(--regular);font-size: 18px;line-height: 25px;color:#111111;transition: all 0.5s ease;}
+.contactInfoBx>h2{font-family: var(--medium);font-size: 22px;line-height: 26px;color:#333333;margin:0 0 4px;}
+.contactInfoBx>a{font-family: var(--medium);font-size: 15px;line-height: 25px;color:#111111;transition: all 0.5s ease;}
 .contactInfoBx>a:hover{color:var(--sred);}
 
 .contactGetInTouchWrap{padding:80px 0;}
-.contactGetInTouch>h3{font-family: var(--medium);font-size: 30px;line-height: 35px;color:#333333;margin:0 0 35px;}
+.contactGetInTouch>h3{font-family: var(--medium);font-size: 26px;line-height: 32px;color:#333333;margin:0 0 35px;}
 .getInBoxSet{display: flex;gap:30px;}
-.getInTouchBox{padding: 30px;background-color: #f5f5f5;border-radius: 16px;flex-basis: calc(100% - 33.3%);}
-.getInTouchBox>h4{font-family: var(--medium);font-size: 25px;line-height: 30px;color:#333333;margin:0 0 20px;}
+.getInTouchBox{padding: 40px 30px 30px;background-color: #f5f5f5;border-radius: 16px;flex-basis: calc(100% - 33.3%);}
+.getInTouchBox>h4{font-family: var(--medium);font-size: 20px;line-height: 25px;color:#333333;margin:0 0 20px;}
 .getInTouchBox>span{position: relative;padding-left: 35px;display: block;}
 .getInTouchBox>span:after{content: '';background-image: url("../images/contactus/address-icon.svg");background-repeat: no-repeat;background-size: contain;display: inline-block;width: 20px;height: 20px;position: absolute;top:10px;left:0;}
 .getInTouchBox>span.email:after{background-image: url("../images/contactus/email.svg");}
-.getInTouchBox>span>em{display: block;font-style: normal;font-family: var(--regular);font-size: 18px;line-height: 30px;color:#000;margin:0;}
-.getInTouchBox>span>p,.getInTouchBox>span>a{font-family: var(--regular);font-size: 16px;line-height: 25px;color:#333333;margin:0;padding-bottom: 20px;transition: all 0.5s ease;}
+.getInTouchBox>span>em{display: block;font-style: normal;font-family: var(--medium);font-size: 15px;line-height: 25px;color:#000;margin:0;}
+.getInTouchBox>span>p,.getInTouchBox>span>a{font-family: var(--regular);font-size: 15px;line-height: 22px;color:#333333;margin:0;padding-bottom: 20px;transition: all 0.5s ease;}
 .getInTouchBox>span>p>i{font-style: normal;display: inline;}
 .getInTouchBox>span>a:hover{color:var(--sred);}
 
-.contactIndiaWrap{padding: 80px 0 120px;border-radius:var(--border-home) ;position: relative;overflow: hidden;min-height: 800px;}
+.contactIndiaWrap{padding: 80px 0 250px;border-radius:var(--border-home) ;position: relative;overflow: hidden;min-height: 800px;}
 .contactIndiaWrap:after{content: '';background-image: url("../images/contactus/india-background.png");background-repeat: no-repeat;background-size: cover;position: absolute;top:0;left:0;bottom: 0;right:0;z-index: 1;} 
 .contactIndiaWrap:before{content: '';z-index: 2;background-color: #f3f3f3;position: absolute;top:0;bottom:0;right:0;left:0;opacity: 0.94;}
 .contactIndiaMain{position: relative;}
 .contactMapHead{display: inline-block;position: absolute;left:0;top:0;z-index: 5;}
-.contactMapHead>h3{font-family: var(--medium);font-size: 28px;line-height: 34px;color:#333333;margin:0 0 10px;}
-.contactMapHead>p{font-family: var(--regular);font-size: 15px;line-height: 25px;color:#333333;}
-.indiaImg{max-width: 808px;margin:0 auto;position: relative;z-index: 3;}
+.contactMapHead>h3{font-family: var(--medium);font-size: 25px;line-height: 28px;color:#333333;margin:0 0 6px;}
+.contactMapHead>p{font-family: var(--regular);font-size: 12px;line-height: 18px;color:#333333;}
+.indiaImg{max-width: 808px;margin:0 auto;position: relative;z-index: 3;padding-top:100px;}
 .indIconSet{display: inline-block;padding-left: 50px;position: absolute;}
-.indIconSet>em{position: absolute;top:0;left:8px;display: inline-block;width: 20px;height:28px;background-image: url(../images/contactus/location-pointer.svg);background-repeat: no-repeat;background-size: cover;cursor: pointer;}
-.indIconSet>div{display: block;padding:15px 20px;background-color:#333333;border-radius: 6px;min-width: 270px;position: absolute;}
+.indIconSet>em{position: absolute;top:0;left:8px;display: inline-block;width: 20px;height:28px;background-image: url(../images/contactus/location-pointer.svg);background-repeat: no-repeat;background-size: cover;cursor: pointer;transition: all 0.5s ease;}
+.indIconSet>em:hover{transform: scale(1.10);}
+.indIconSet>div{opacity:0;visibility: hidden;padding:15px 20px;background-color:#333333;border-radius: 6px;min-width: 270px;position: absolute;transition: all 00.5s ease;}
+.indIconSet>div.active{opacity:1;visibility: visible;}
 .indIconSet>div:after{content:'';position: absolute;top:10px;left:-12px;width: 0;height: 0;border-top: 6px solid transparent;border-right: 12px solid #333333;border-bottom: 6px solid transparent;}
 .indIconSet>div>h6{font-family: var(--medium);font-size: 18px;line-height: 24px;color:#fff;margin: 0;}
 .indIconSet>div>p{font-family: var(--regular);font-size: 15px;line-height: 24px;color:#fff;margin: 0;}
@@ -41,7 +43,7 @@
 .indIconSet.five{margin-left: -267px;bottom: 285px;left: 50%;}
 .indIconSet.six{margin-left: -165px;bottom: 50%;left: 50%;}
 
-.contactEnqFormWrap{display: block;border-radius:var(--border-home);padding:80px 0;}
+.contactEnqFormWrap{display: block;border-radius:var(--border-home);padding:100px 0 90px;margin-top: -130px;background-color: #fff;position: relative;z-index: 2;}
 .contactEnqSec>h4{font-family: var(--medium);font-size: 24px;line-height: 26px;color:#333333;margin: 0 0 10px;}
 .contactEnqSec>p{font-family: var(--regular);font-size: 15px;line-height: 24px;color:#333;margin: 0;}
 
@@ -49,12 +51,13 @@
 .formGroup>div{flex-grow: 1;}
 .formInput{border: 1px solid #d1d1d1;border-radius: 10px;margin-top: 20px;}
 .formInput>input{height: 40px;border-radius: 10px;padding:0 20px;width: 100%;border: none;}
-.formInput>textarea{border-radius: 10px;padding:20px;width: 100%;border: none;}
+.formInput > textarea:focus-visible,.formInput>input:focus-visible{outline: none;}
+.formInput>textarea{border-radius: 10px;padding:20px;width: 100%;border: none;font-family: var(--regular);}
 .formGroup.nogrow > div{flex-grow: 0;}
-.frmCaptcha{width: 100px;height:40px;border:1px dashed #d1d1d1;border-radius: 10px;display: flex;justify-content: center;align-items: center;}
-.formInput.mxwcap{max-width: 100px;border: none;}
+.frmCaptcha{width: 100px;height:40px;border-radius: 10px;display: flex;justify-content: center;align-items: center;}
+.formInput.mxwcap{max-width: 100px;border:1px dashed #d1d1d1;}
 .formInput.mxwcapinp{max-width: 150px;}
 .formInput.mxrefresh{max-width: 50px;border: none;}
-.refreshIcon{display: inline-block;background-color: #a2a2a2;border-radius: 10px;position: relative;width: 50px;height: 50px;}
-.refreshIcon:after{    content: "";background: url('../images/contactus/arrow-rotate-right.svg') no-repeat 100%;width: 25px;height: 25px;display: inline-block;position: absolute;top: 10px;left: 12px;}
-.formBtn{display: inline-block;background-color: #444444;color:#fff;border-radius: 10px;padding: 15px 45px;margin-top:10px;font-size: 14px;line-height: 15px;}
+.refreshIcon{display: inline-block;background-color: #a2a2a2;border-radius: 10px;position: relative;width: 40px;height: 40px;}
+.refreshIcon:after{    content: "";background-image: url(../images/contactus/arrow-rotate-right.svg);background-repeat: no-repeat;background-size: contain;width: 15px;height: 15px;display: inline-block;position: absolute;top: 12px;left: 13px;}
+.formBtn{display: inline-block;background-color: #444444;color:#fff;border-radius: 10px;padding: 15px 45px;margin-top:25px;font-size: 14px;line-height: 15px;}
