--- a/public/styles/testbreaks.css
+++ b/public/styles/testbreaks.css
@@ -26,6 +26,8 @@
 
 
 @media screen and (min-width: 1300px) {
+
+    .indiaImg{padding-top: 0;}
 }
 
 
@@ -40,15 +42,47 @@
 
 @media only screen and (max-width: 991px) {
 
+    .contactInfoList{padding: 50px 0;}
+    .contactInfoBx {padding-left: 56px;}
+    .contactInfoBx>span>div{max-width: 40px;}
+    
+    .contactInfoBx > h2{font-size: 16px;line-height: 26px;margin: 0;}
+    .contactInfoBx > a{font-family: var(--regular);font-size: 14px;line-height: 16px;}
+    .getInBoxSet{gap:15px;flex-wrap: wrap;justify-content: center;}
+    .getInTouchBox {flex-basis: 0;flex-shrink: 0;flex-grow: 1;}
+
+    .contactGetInTouchWrap{padding: 50px 0;}
+    .contactIndiaWrap{background-color: #f3f3f3;}
+    .contactIndiaWrap:before,.contactIndiaWrap:after{display: none;}
+
+    .indiaImg{max-width: 449px;}
+    .indIconSet.one{margin-left: -108px;bottom:49px;}
+    .indIconSet.two{margin-left: -80px;bottom:81px;}
+    .indIconSet.three{margin-left: -132px;bottom: 122px;}
+    .indIconSet.four{margin-left: -72px;bottom: 141px;}
+    .indIconSet.five{margin-left: -150px;bottom: 169px;}
+    .indIconSet.six{margin-left: -91px;bottom: 259px;}
+
 
 }
 
 @media only screen and (max-width: 767px) {
-
+.contactInfoList{flex-direction: column;padding: 30px 0 10px;}
+.contactInfoBx{padding:0 0 20px 65px ;}
+.contactGetInTouchWrap{padding: 30px 0;}
+.contactGetInTouch > h3{font-size: 20px;line-height: 25px;margin: 0 0 20px;}
+.getInTouchBox{padding: 20px;}
+.getInTouchBox > h4{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
+.contactIndiaWrap{padding: 30px 0;}
+.contactEnqFormWrap{padding: 30px 0;}
+.contactMapHead > h3{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
+.contactEnqSec > h4{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
+.contactEnqSec > p{font-size: 15px;line-height: 24px;margin: 0 0 10px;}
   
 }
 
 @media only screen and (max-width: 479px) {
+    
 
 }
 
