--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -30,7 +30,7 @@
 .indIconSet{display: inline-block;padding-left: 50px;position: absolute;}
 .indIconSet>em{position: absolute;top:0;left:8px;display: inline-block;width: 20px;height:28px;background-image: url(../images/contactus/location-pointer.svg);background-repeat: no-repeat;background-size: cover;cursor: pointer;transition: all 0.5s ease;}
 .indIconSet>em:hover{transform: scale(1.10);}
-.indIconSet>div{opacity:0;visibility: hidden;padding:15px 20px;background-color:#333333;border-radius: 6px;min-width: 270px;position: absolute;transition: all 00.5s ease;}
+.indIconSet>div{opacity:0;visibility: hidden;padding:15px 20px;background-color:#333333;border-radius: 6px;min-width: 270px;position: absolute;transition: all 00.5s ease;z-index: 15;}
 .indIconSet>div.active{opacity:1;visibility: visible;}
 .indIconSet>div:after{content:'';position: absolute;top:10px;left:-12px;width: 0;height: 0;border-top: 6px solid transparent;border-right: 12px solid #333333;border-bottom: 6px solid transparent;}
 .indIconSet>div>h6{font-family: var(--medium);font-size: 18px;line-height: 24px;color:#fff;margin: 0;}
