--- a/public/styles/testbreaks.css
+++ b/public/styles/testbreaks.css
@@ -54,35 +54,66 @@
     .contactGetInTouchWrap{padding: 50px 0;}
     .contactIndiaWrap{background-color: #f3f3f3;}
     .contactIndiaWrap:before,.contactIndiaWrap:after{display: none;}
+      .contactIndiaWrap{min-height: auto;}
 
     .indiaImg{max-width: 449px;}
+    .indIconSet{padding-left: 45px;}
     .indIconSet.one{margin-left: -108px;bottom:49px;}
     .indIconSet.two{margin-left: -80px;bottom:81px;}
     .indIconSet.three{margin-left: -132px;bottom: 122px;}
     .indIconSet.four{margin-left: -72px;bottom: 141px;}
     .indIconSet.five{margin-left: -150px;bottom: 169px;}
     .indIconSet.six{margin-left: -91px;bottom: 259px;}
+    .indIconSet > div{padding: 15px;min-width: 200px;}
+    .indIconSet > div > h6{font-size: 15px;line-height: 20px;}
+    .indIconSet > div > p{font-size: 14px;line-height: 24px;}
+  
 
 
 }
 
 @media only screen and (max-width: 767px) {
+
 .contactInfoList{flex-direction: column;padding: 30px 0 10px;}
 .contactInfoBx{padding:0 0 20px 65px ;}
 .contactGetInTouchWrap{padding: 30px 0;}
 .contactGetInTouch > h3{font-size: 20px;line-height: 25px;margin: 0 0 20px;}
 .getInTouchBox{padding: 20px;}
 .getInTouchBox > h4{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
-.contactIndiaWrap{padding: 30px 0;}
+.contactIndiaWrap{padding: 30px 0 155px;}
 .contactEnqFormWrap{padding: 30px 0;}
 .contactMapHead > h3{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
 .contactEnqSec > h4{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
 .contactEnqSec > p{font-size: 15px;line-height: 24px;margin: 0 0 10px;}
+
   
 }
 
 @media only screen and (max-width: 479px) {
+ 
     
+.contactIndiaWrap{padding: 30px 0 175px;}
+.contactInfoBx > span > div{max-width: 20px;}
+.contactInfoBx {padding: 0 0 20px 30px;}
+.contactInfoBx>span{top:6px;}
+.contactMapHead > h3{margin:0 0 4px}
+.indiaImg{max-width: 300px;padding-top: 73px;}
+.indIconSet{padding-left: 28px;}
+.indIconSet>div{padding: 10px;}
+.indIconSet>em{width:15px;height:15px;background-size: contain;}
+.indIconSet.one{margin-left: -74px;bottom: 32px;}
+.indIconSet.two{margin-left: -53px;bottom: 50px;}
+.indIconSet.three{margin-left: -85px;bottom: 74px;}
+.indIconSet.four{margin-left: -50px;bottom: 89px;}
+.indIconSet.five{margin-left: -100px;bottom: 107px;}
+.indIconSet.six{margin-left: -63px;bottom: 165px;}
+.indIconSet > div{min-width: 150px;top:-79px}
+.indIconSet > div > p {font-size: 13px;line-height: 24px;}
+.indIconSet > div:after{top:81px}
+.formGroup {flex-direction: column;gap:0;}
+.formGroup.nogrow{flex-direction: row;gap:10px;}
+
+
 
 }
 
