--- a/public/styles/staticbreaks.css
+++ b/public/styles/staticbreaks.css
@@ -36,6 +36,7 @@
     /*common*/
     .commonBanner .commonBannerContent { padding: 0 100px 70px; }
 
+    /*product listing*/
     .productLeftMenuSec {min-width: 350px;}
 }
 
@@ -54,8 +55,15 @@
     .commonBanner .commonBannerWrap{height: 450px;}
     .commonBanner .commonBannerContent { padding: 0 25px 30px; }
 
+
+    /*product listing*/
+    .prdctMobMenu{position: relative;}
+    .prdctMobMenu>span{display: block;padding: 10px ;margin-bottom: 10px;background-color: var(--blue);color:#fff;font-size: 18px;line-height: 20px; position: absolute;left:0;right:0;cursor: pointer;}
+    .prdctMobMenu>div{display: none;position: absolute;top:40px;left:0;right:0;background-color: #fdfafaf2;max-height: 250px;overflow-y: scroll;transition: all 0.5s ease;}
+    .prdctMobMenu>div.active{display: block;padding-top: 15px;}
     .productSections {flex-direction: column;}
     .productContent {top: 60px;left: 25px;}
+    .productList{padding-top:30px ;}
 
     /*products main*/
     .productsMainItemContent { left: 25px; top: 60px; }
@@ -107,8 +115,10 @@
 
 @media only screen and (max-width: 767px) {
     
+    /*product listing*/
+    .productSections{gap:30px}
     .prdtDesc>em {font-size: 16px; line-height: 25px; margin-bottom: 5px;}
-    .prdtDesc {padding: 0 0 20px;}
+    .prdtDesc {margin: 0 0 20px;}
     .productLeftMenuSec {min-width: auto;}
 
     /*common banner*/    
@@ -170,7 +180,11 @@
 }
 
 @media only screen and (max-width: 479px) {
+    /*product listing*/
     .productList {grid-template-columns: 1fr;}
+    .productSections{padding: 30px 0;}
+    .productLeftMenu > span{font-size: 16px;line-height: 25px;}
+    .productLeftMenu > ul{font-size: 14px;line-height: 24px;}
 
     /*approvals-and-associates page*/
     .approvalsAndAsscociatesBodyGrid{gap: 30px 20px;}
