--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -1,3 +1,4 @@
+/*contact us*/
 .contactUsWrapper{}
 .contactInfoList{display: flex;justify-content: space-between;padding: 80px 0;border-bottom: 1px solid #e9e9e9;}
 .contactInfoBx{position: relative;padding-left: 72px;}
